<resources>
    <string name="app_name">Momento</string>
    <string name="app_logo">Apps Logo</string>
    <string name="app_tagline">Capture and share your moment!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_tagline">Register your account and be part of the Super Momento Squad!</string>
    <string name="register_success">Register account successfully.\nPlease login!</string>
    <string name="register_error">Email has been used.\nPlease choose another email!</string>
    <string name="register_error_validation">Please make sure all inputs are correct!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Please input valid email</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="wrong_email_password">Please input correct email or password!</string>
    <string name="user_name">User Name</string>
    <string name="story">S T O R Y</string>
    <string name="story_description">Story Description</string>
    <string name="posting_date">Posting Date</string>
    <string name="already_have_account">Already have an account?<font color="#0FA958"> Login.</font></string>
    <string name="do_not_have_account">Don\'t have an account yet?<font color="#0FA958"> Register.</font></string>
    <string name="error_message">Something went wrong.\nPlease try again later.</string>
    <string name="hello">Hello,</string>
    <string name="close"><font color="#0FA958">CLOSE</font></string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="date_template">17/Agu/1945</string>
    <string name="on_date">on %1$s</string>
    <string name="description_template">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et tortor diam. Duis et rhoncus ex, non rhoncus libero. Sed vulputate placerat consequat. Vestibulum ornare lacinia eleifend.</string>
    <string name="posted_by">Posted by <font color="#0FA958">%1$s</font></string>
    <string name="caption">Caption</string>
    <string name="posting">Posting</string>
    <string name="permission_denied_alert">You need to allow permissions to use this feature.</string>
    <string name="success_create_story_alert">Create story successfully!</string>
    <string name="error_create_story_alert">Make sure captions and photos are added.</string>
    <string name="create_your_story">Create your story</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="location_not_found_alert">Location is not found. Try Again.</string>
    <string name="title_activity_map">Story Tracker</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="loading_map">Loading Map</string>
    <string name="share_my_location">Share My Location</string>
</resources>