<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register_tagline"
            android:textSize="16sp"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:alpha="1"
            app:errorEnabled="true"
            app:errorTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="1"
            app:errorEnabled="true"
            app:errorTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_field"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

            <com.example.storyappsubmission.customview.CustomEmailTextField
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_field"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.example.storyappsubmission.customview.CustomPasswordTextField
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.example.storyappsubmission.customview.CustomButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:alpha="1"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/already_have_account"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>