<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.storydetail.StoryDetailActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_story_photo"
            android:transitionName="storyPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@drawable/radius_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_posted_by"
            android:transitionName="postedByUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_story_photo" />

        <TextView
            android:id="@+id/tv_on_date"
            android:transitionName="onDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/on_date"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_posted_by" />

        <TextView
            android:id="@+id/tv_description"
            android:transitionName="description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top|start"
            android:justificationMode="inter_word"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/description_template"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_on_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>